# kb-wiki

./: .gitignore  CHANGELOG.md  GEMINI.md  README.md  build.py  pyproject.toml
docs/: index.md  kb-core.md
docs/kb-clipboard/: README.md  cli-usage.md  desktop-client.md
docs/kb-image/: README.md  ai-integration.md  cli-usage.md
docs/kb-network/: README.md  telemetry-server.md
docs/kb-network-agent/: README.md  telemetry-collector.md
docs/kb-repo/: README.md  cli-usage.md
docs/kb-rss/: README.md  ai-agent.md  cli-usage.md
docs/kb-vault/: README.md  cli-usage.md
docs/kb-web/: README.md  browser-extension.md  server-api.md
src/kb_wiki/: __init__.py  cli.py  compiler.py  server.py
src/kb_wiki/static/: style.css
src/kb_wiki/templates/: layout.html
