[project]
name = "kb-wiki"
version = "0.1.0"
description = "Static wiki site compiler and host server for the kb stack"
readme = "README.md"
authors = [
    { name = "Will Morris", email = "88165849+Willmo103@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "typer>=0.26.6",
    "uvicorn>=0.48.0",
    "watchfiles>=1.2.0",
    "kb-core",
]

[project.scripts]
kb-wiki = "kb_wiki.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
kb-core = { git = "https://github.com/willmo103/kb-core.git" }

